@@ -5,5 +5,8 @@
       <role name="Owner"/>
       <role name="Editor"/>
     </permission>
+    <permission name="Delete objects" acquire="True">
+      <role name="Manager"/>
+    </permission>
   </permissions>
 </rolemap>
