@@ -231,4 +231,13 @@
         directory="profiles/4100"
         />
 
+    <!-- 4100 -> 4101 -->
+    <upgrade-step:importProfile
+        title="Adjust role mapping for delete objects permission"
+        profile="opengever.base:default"
+        source="4100"
+        destination="4101"
+        directory="profiles/4101"
+        />
+
 </configure>
