@@ -1,0 +1,7 @@
+<rolemap>
+  <permissions>
+    <permission name="Delete objects" acquire="True">
+      <role name="Manager"/>
+    </permission>
+  </permissions>
+</rolemap>
